--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "recommender",
+  "name": "recommender-client-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kacperkk2.github.io/recommender-client-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -9,6 +10,7 @@
     "antd": "^3.26.3",
     "axios": "^0.19.0",
     "core-js": "^3.5.0",
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
@@ -17,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
